--- a/blog-post-4.html
+++ b/blog-post-4.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Bootstrap 4 Blog Template For Developers</title>
+    <title>Algoritmos empleados para manejo de cadenas</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Blog Template">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <meta name="description" content="Blog Template"> 
     <link rel="shortcut icon" href="favicon.ico"> 
     
     <!-- FontAwesome JS-->
